--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Public Art Catalogue</h1>
-            <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These pages cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
+            <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
         </div>
     </div>
     <div class="container">
