--- a/index.htm
+++ b/index.htm
@@ -85,6 +85,7 @@
     </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+    <script src="scripts/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="scripts/dataTables.bootstrap.min.js" type="text/javascript"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
