--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,49 @@
     <![endif]-->
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/dataTables.bootstrap.min.css" rel="stylesheet">
     <link href="css/public.css" rel="stylesheet">
+
+    <style>
+        .table-center-wrap {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+
+        .demo-description {
+            margin-bottom: 20px;
+        }
+
+        .grid__brick .grid__brick-inner {
+            background-color: #F0F0F0;
+            height: 100px;
+            border: 1px solid rgba(0, 0, 0, 0.3);
+        }
+
+        .grid__brick:nth-child(n+4) {
+            margin-top: 15px;
+        }
+
+        @media (max-width: 767px) {
+            .grid__brick:nth-child(n+3) {
+                margin-top: 15px;
+            }
+
+            /* Padding on the grid column is keep it from getting smaller than 30px */
+            .shuffle--fluid .shuffle__sizer {
+                padding: 0;
+            }
+        }
+
+        .aside {
+            height: 200px;
+            background-color: #E0E0E0;
+        }
+
+            .aside + .aside {
+                margin-top: 10px;
+            }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -57,17 +98,29 @@
         </div>
     </div>
     <div class="container">
-        <table id="tblCatalogue" class="table">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Artist(s)</th>
-                    <th>Type of Work</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+        <button class="btn btn--go" data-filter-value="green"><span class="visuallyhidden">Green</span></button>
+        <select class="sort-options">
+            <option value="">Default</option>
+            <option value="title">Title</option>
+            <option value="date">Date</option>
+        </select>
+    </div>
+    <br/>
+    <div class="container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12">
+                    <div class="row">
+                        <div id="grid" class="shuffle--container shuffle--fluid">
+                            <div class="grid__brick col-xs-6 col-sm-4" data-title="This is a title 1" data-date="2014"><a class="thumbnail" href="#"><img class="img-responsive" src="http://placehold.it/400x300" alt=""></a></div>
+                            <div class="col-xs-1 shuffle__sizer"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
         <footer>
             <div class="row">
                 <div class="col-lg-12">
@@ -85,8 +138,9 @@
     </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="scripts/dataTables.bootstrap.min.js" type="text/javascript"></script>
+    <script src="scripts/modernizr.custom.min.js" type="text/javascript"></script>
+    <script src="scripts/jquery.shuffle.modernizr.min.js" type="text/javascript"></script>
+    <script src="scripts/jquery.shuffle.min.js" type="text/javascript"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
 </body>
