Fixing bug in category selector

--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="http://www.bathnes.gov.uk" title="Go to Bath &amp; NE Somerset Council home page"><img class="logo" src="/images/logo.svg" /></a>
+        <a href="http://www.bathnes.gov.uk" title="Go to Bath &amp; NE Somerset Council home page"><img class="logo" src="images/logo.svg" /></a>
     </div>
     <nav class="navbar navbar-inverse navbar-fixed">
         <div class="container">
@@ -45,6 +45,7 @@
         <div class="container">
             <h1>Public Art Catalogue</h1>
             <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
+            <p>Data powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
         </div>
     </div>
     <div class="container">
