Cleaning up bugs

--- a/index.htm
+++ b/index.htm
@@ -45,10 +45,10 @@
         <div class="container">
             <h1>Public Art Catalogue</h1>
             <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
-            <p>Data powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
         </div>
     </div>
     <div class="container">
+        <p class="small">Data curated by Bath and North East Somerset Council and powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
         <form class="form-horizontal">
             <fieldset>
                 <legend>Choose items to display</legend>
