adding ordering back in

--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
                         <input class="form-control filter__search js-shuffle-search" id="txtSearch" type="text" placeholder="Search">
                     </div>
                 </div>
-                <!--<div class="form-group">
+                <div class="form-group">
                     <label class="col-lg-2 control-label" for="select">Order items</label>
                     <div class="col-lg-10">
                         <select class="sort-options form-control">
@@ -70,7 +70,7 @@
                             <option value="date">Date</option>
                         </select>
                     </div>
-                </div>-->
+                </div>
             </fieldset>
         </form>
     </div>
