--- a/index.htm
+++ b/index.htm
@@ -41,13 +41,9 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Public Art Catalogue</h1>
-            <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
-        </div>
-    </div>
     <div class="container">
+        <h1>Public Art Catalogue</h1>
+        <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
         <p class="small">Data curated by Bath and North East Somerset Council and powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
         <form class="form-horizontal">
             <fieldset>
@@ -93,6 +89,24 @@
                 </div>
             </div>
         </footer>
+    </div>
+
+    <!-- Item details modal -->
+    <div class="modal fade" id="itemDetails" tabindex="-1" role="dialog" aria-labelledby="Item details">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body">
+                    <p id="pDescription"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
