--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -98,8 +98,12 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title"></h4>
+                    <h4 class="modal-title modal-loading">
+                        <span class='glyphicon-left glyphicon glyphicon-refresh spinning'></span> Loading...
+                    </h4>
                 </div>
                 <div class="modal-body">
+                    
                     <p id="pDescription"></p>
                 </div>
                 <div class="modal-footer">
