--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -103,7 +103,6 @@
                     </h4>
                 </div>
                 <div class="modal-body">
-                    
                     <p id="pDescription"></p>
                 </div>
                 <div class="modal-footer">
