--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,35 @@
                     </h4>
                 </div>
                 <div class="modal-body">
-                    <p id="pDescription"></p>
+                    <div id="divCategories"></div>
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#details" data-toggle="tab">details</a></li>
+                        <li><a href="#location" data-toggle="tab">location</a></li>
+                        <li><a href="#measurements" data-toggle="tab">measurements</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" aria-expanded="false" href="#" data-toggle="dropdown">
+                                artists <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" id="ulArtists"></ul>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="divTabContent">
+                        <div class="tab-pane fade active in" id="details">
+                            <h5>Description</h5>
+                            <p id="pDescription"></p>
+                            <!-- Full item details data - description, unveling, year, etc. -->
+                        </div>
+                        <div class="tab-pane fade" id="location">
+                            <!-- Item location data - map, address and navigation buttons -->
+                            <h5>Address</h5>
+                            <p id="pLocation"></p>
+                            <div class="itemmap"></div>
+                        </div>
+                        <div class="tab-pane fade" id="measurements">
+                            <!-- Item dimensions and condition -->
+                        </div>
+                        <!-- Artist details will be populated in following tabs -->
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
