--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
     <![endif]-->
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/ekko-lightbox.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -139,11 +140,13 @@
             </div>
         </div>
     </div>
+
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="scripts/modernizr.custom.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.shuffle.modernizr.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.shuffle.min.js" type="text/javascript"></script>
+    <script src="scripts/ekko-lightbox.min.js"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
 </body>
