--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ekko-lightbox.min.css" rel="stylesheet" />
+    <link href="css/leaflet.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -120,7 +121,7 @@
                         <div class="tab-pane fade active in" id="details">
                             <h5>Description</h5>
                             <p id="pDescription"></p>
-                            <!-- Full item details data - description, unveling, year, etc. -->
+                            <!-- Full item details data - description, unveiling, year, etc. -->
                         </div>
                         <div class="tab-pane fade" id="location">
                             <!-- Item location data - map, address and navigation buttons -->
@@ -140,13 +141,13 @@
             </div>
         </div>
     </div>
-
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
     <script src="scripts/modernizr.custom.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.shuffle.modernizr.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.shuffle.min.js" type="text/javascript"></script>
     <script src="scripts/ekko-lightbox.min.js"></script>
+    <script src="scripts/leaflet.js"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
 </body>
