--- a/index.htm
+++ b/index.htm
@@ -109,7 +109,7 @@
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#details" data-toggle="tab">details</a></li>
                         <li><a href="#location" data-toggle="tab">location</a></li>
-                        <li><a href="#measurements" data-toggle="tab">measurements</a></li>
+                        <li><a href="#measurements" data-toggle="tab">physical details</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" aria-expanded="false" href="#" data-toggle="dropdown">
                                 artists <span class="caret"></span>
