Filling in missing data

--- a/index.htm
+++ b/index.htm
@@ -51,12 +51,21 @@
             <fieldset>
                 <legend>Choose items to display</legend>
                 <div class="form-group">
-                    <ul id="btnsCategory" class="nav nav-pills"></ul>
-                </div>
-                <div class="form-group">
                     <label class="col-lg-2 control-label" for="txtSearch">Search</label>
                     <div class="col-lg-10">
                         <input class="form-control filter__search js-shuffle-search" id="txtSearch" type="text" placeholder="Search">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-2 control-label" for="txtSearch">Category</label>
+                    <div class="col-lg-10">
+                        <ul id="btnsCategory" class="nav nav-pills"></ul>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-2 control-label" for="txtSearch">Artist</label>
+                    <div class="col-lg-10">
+                        <select class="sort-options form-control" id="selArtists"></select>
                     </div>
                 </div>
                 <div class="form-group">
