Adding in artist drop down

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
       <script src="scripts/respond.min.js"></script>
     <![endif]-->
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/ekko-lightbox.min.css" rel="stylesheet" />
     <link href="css/leaflet.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
@@ -65,7 +65,9 @@
                 <div class="form-group">
                     <label class="col-lg-2 control-label" for="txtSearch">Artist</label>
                     <div class="col-lg-10">
-                        <select class="sort-options form-control" id="selArtists"></select>
+                        <select class="sort-options form-control" id="selArtists">
+                            <option value="">Select an artist</option>
+                        </select>
                     </div>
                 </div>
                 <div class="form-group">
