--- a/index.htm
+++ b/index.htm
@@ -7,13 +7,13 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="scripts/html5shiv.min.js"></script>
-      <script src="scripts/respond.min.js"></script>
+      <script src="bower_components/html5shiv/dist/html5shiv.min.js"></script>
+      <script src="bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
+    <link href="bower_components/ekko-lightbox/dist/ekko-lightbox.css" rel="stylesheet" />
+    <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/ekko-lightbox.min.css" rel="stylesheet" />
-    <link href="css/leaflet.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     <label class="col-lg-2 control-label" for="txtSearch">Artist</label>
                     <div class="col-lg-10">
-                        <select class="sort-options form-control" id="selArtists">
+                        <select class="form-control" id="selArtists">
                             <option value="">Select an artist</option>
                         </select>
                     </div>
@@ -152,13 +152,11 @@
             </div>
         </div>
     </div>
-    <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/modernizr.custom.min.js" type="text/javascript"></script>
-    <script src="scripts/jquery.shuffle.modernizr.min.js" type="text/javascript"></script>
-    <script src="scripts/jquery.shuffle.min.js" type="text/javascript"></script>
-    <script src="scripts/ekko-lightbox.min.js"></script>
-    <script src="scripts/leaflet.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/shufflejs/dist/shuffle.min.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet.js"></script>
+    <script src="bower_components/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
 </body>
