--- a/index.htm
+++ b/index.htm
@@ -44,22 +44,38 @@
         </div>
     </nav>
     <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="http://www.bathnes.gov.uk">Home</a></li>
+            <li><a href="http://www.bathnes.gov.uk/services/sport-leisure-and-parks/arts-development">Arts Development</a></li>
+            <li><a href="http://www.bathnes.gov.uk/services/sport-leisure-and-parks/arts-development/public-art-bath-and-north-east-somerset">Public Art in Bath and North East Somerset</a></li>
+            <li class="active">Catalogue</li>
+        </ul>
         <h1>Public Art Catalogue</h1>
-        <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.</p>
+        <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.  For more information about his project please contact the Arts Development team at <a href="mailto:arts@bathnes.gov.uk">arts@bathnes.gov.uk</a></p>
         <p class="small">Data curated by Bath and North East Somerset Council and powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
+        
+        <div class="well">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="/">Gallery View</a></li>
+                <li><a href="/map">Map View</a></li>
+            </ul>
+        </div>
+        
         <form class="form-horizontal">
             <fieldset>
-                <legend>Choose items to display</legend>
+                <legend>Filter and search gallery</legend>
                 <div class="form-group">
                     <label class="col-lg-2 control-label" for="txtSearch">Search</label>
                     <div class="col-lg-10">
                         <input class="form-control filter__search js-shuffle-search" id="txtSearch" type="text" placeholder="Search">
+                        <span class="help-block">As you enter text the gallery will filter based on matches on title and artist name.</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-lg-2 control-label" for="txtSearch">Category</label>
                     <div class="col-lg-10">
                         <ul id="btnsCategory" class="nav nav-pills"></ul>
+                        <span class="help-block">Select one category at a time to display items of that type. An item may appear in more than one category.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -68,6 +84,7 @@
                         <select class="form-control" id="selArtists">
                             <option value="">Select an artist</option>
                         </select>
+                        <span class="help-block">Choose an artist to see all works by that artist.</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -80,27 +97,50 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-10">
+                        <button id="btnReset" class="btn btn-link btn-reset pull-right">Reset Filters</button>
+                    </div>
+                </div>
             </fieldset>
         </form>
     </div>
     <br />
     <div class="container">
+        <h4 id="hdrGalleryTitle">Displaying all items</h4>
+        <hr />
         <div id="grid" class="row shuffle--container shuffle--fluid"></div>
     </div>
     <div class="container">
         <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-unstyled">
-                        <li class="pull-right"><a href="#top">Back to top</a></li>
-                        <li><a href="http://www.bathnes.gov.uk/accessibility">Accessibility</a></li>
-                        <li><a href="http://www.bathnes.gov.uk/contact-us">Contact Us</a></li>
-                        <li><a href="http://www.bathnes.gov.uk/disclaimer-and-privacy-statement">Disclaimer &amp; Privacy Policy</a></li>
-                        <li><a href="http://www.bathnes.gov.uk/cookies">Cookies</a></li>
-                        <li><a href="http://www.bathnes.gov.uk/website-advertising">Advertising</a></li>
-                    </ul>
-                </div>
-            </div>
+            <ul class="list-inline">
+                <li>
+                    <small>
+                        <a href="http://www.bathnes.gov.uk/accessibility">Accessibility</a>
+                    </small>
+                </li>
+                <li>
+                    <small>
+                        <a href="mailto:arts@bathnes.gov.uk">Contact Arts Development</a>
+                    </small>
+                </li>
+                <li>
+                    <small>
+                        <a href="http://www.bathnes.gov.uk/disclaimer-and-privacy-statement">Disclaimer & Privacy Policy</a>
+                    </small>
+                </li>
+                <li>
+                    <small>
+                        <a href="http://www.bathnes.gov.uk/cookies">Cookies</a>
+                    </small>
+                </li>
+                <li>
+                    <small>
+                        <a href="http://www.bathnes.gov.uk/website-advertising">Advertising</a>
+                    </small>
+                </li>
+            </ul>
         </footer>
     </div>
 
