Applying some bug fixing and web.config

--- a/map.htm
+++ b/map.htm
@@ -14,7 +14,7 @@
     <link href="bower_components/ekko-lightbox/dist/ekko-lightbox.css" rel="stylesheet" />
     <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
     <link href="bower_components/drmonty-leaflet-awesome-markers/css/leaflet.awesome-markers.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/bootswatch/paper/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -57,8 +57,8 @@
         <p class="small">Data curated by Bath and North East Somerset Council and powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
         <div class="well">
             <ul class="nav nav-tabs">
-                <li><a href="/">Gallery View</a></li>
-                <li class="active"><a href="/map">Map View</a></li>
+                <li><a href="./">Gallery View</a></li>
+                <li class="active"><a href="map">Map View</a></li>
             </ul>
         </div>
     </div>
