--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
     <link href="bower_components/ekko-lightbox/dist/ekko-lightbox.css" rel="stylesheet" />
     <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/bootswatch/paper/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
 <body>
@@ -56,8 +56,8 @@
 
         <div class="well">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="/">Gallery View</a></li>
-                <li><a href="/map.htm">Map View</a></li>
+                <li class="active"><a href="./">Gallery View</a></li>
+                <li><a href="map">Map View</a></li>
             </ul>
         </div>
 
